# op-cli

./: .gitignore  README.md  hash.txt
op/: Cargo.toml  README.md  build_release.ps1  output.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt
op/src/: discovery.rs  main.rs  matcher.rs  preferences.rs
packaging/chocolatey/: op.nuspec  opn.nuspec  pack.ps1
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/scoop/: README.md  op.json
packaging/winget/: README.md
