[package]
name = "opn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.4"
lnk = "0.6.3"
open = "5.0"
anyhow = "1.0"
chrono = "0.4"
encoding_rs = "0.8"
